gts-macros/tests/compile_fail/instance_on_non_const.stderr
error: gts_well_known_instance: Only `const` items are supported. Usage: `const NAME: &str = r#"{ ... }"#;`
 --> tests/compile_fail/instance_on_non_const.rs:5:1
  |
5 | / #[gts_well_known_instance(
6 | |     dir_path = "instances",
7 | |     schema_id = "gts.x.core.events.topic.v1~",
8 | |     instance_segment = "x.commerce._.orders.v1.0"
9 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `gts_well_known_instance` (in Nightly builds, run with -Z macro-backtrace for more info)
